--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,32 +1,36 @@
-name: SonarQube Scan
+name: SonarCloud Analysis
 
 on:
   push:
     branches:
       - main
   pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  sonarqube:
-    name: SonarQube Analysis
+  sonarcloud:
+    name: SonarCloud
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # ✅ Step 1: Checkout the code
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up Java 17
+      # ✅ Step 2: Set up Java 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          java-version: 17
           distribution: 'temurin'
-          java-version: '17'
 
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@7295e71c9583053f5bf40e9d4068a0c974603ec8
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # ✅ Step 3: Run SonarCloud scan
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarqube-scan-action@v2
         with:
           args: >
             -Dsonar.projectKey=AjitGode_NextGen-React
             -Dsonar.organization=AjitGode
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
