--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -9,28 +9,23 @@ on:
 
 jobs:
   sonarcloud:
-    name: SonarCloud
     runs-on: ubuntu-latest
-
     steps:
-      # ✅ Step 1: Checkout the code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # ✅ Step 2: Set up Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: 'temurin'
 
-      # ✅ Step 3: Run SonarCloud scan
       - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v2
+        uses: SonarSource/sonarcloud-github-action@v2
         with:
+          projectBaseDir: .
           args: >
             -Dsonar.projectKey=AjitGode_NextGen-React
             -Dsonar.organization=AjitGode
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: https://sonarcloud.io
